# OfferGuide

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  pyproject.toml
browser_extension/: manifest.json  popup.html  popup.js
deploy/: README.md
deploy/launchd/: com.offerguide.daemon.plist
docs/: strategy_and_feasibility.md  tracking_strategy.md
examples/: dogfood_w11.py  dogfood_w11_output.txt  dogfood_w12_docx.py  quickstart.py
src/offerguide/: __init__.py  application_events.py  auto_pipeline.py  briefs.py  config.py  corpus_quality.py  daily_brief.py  email_classifier.py  ics_parser.py  inbox.py  interview_corpus.py  jd_enricher.py  pipeline_view.py  state_machine.py  story_bank.py  user_facts.py  verdict.py
src/offerguide/agent/: __init__.py  graph.py  state.py
src/offerguide/agentic/: __init__.py  corpus_collector.py  email_classifier_llm.py  meta_agent.py  search.py
src/offerguide/autonomous/: __init__.py  __main__.py  scheduler.py
src/offerguide/evolution/: __init__.py  __main__.py  cli.py  diff.py  dspy_module.py  golden_trainset.py  metrics.py  runner.py
src/offerguide/llm/: __init__.py  client.py
src/offerguide/memory/: __init__.py  db.py  vec.py
src/offerguide/profile/: __init__.py  loader.py  schema.py
src/offerguide/skills/: __init__.py  _loader.py  _runtime.py  _spec.py
src/offerguide/spiders/: __init__.py  _base.py  awesome_jobs.py  yingjiesheng.py
tests/: test_w1.py  test_w10_spiders_auto_pipeline.py  test_w11_quality_profile_gap.py  test_w11b_corpus_classify_job.py  test_w12_docx_tailor.py  test_w12_fix_audit.py  test_w12_memory_tailor_mock.py  test_w12_search_backends.py  test_w2_llm.py  test_w2_platforms.py  test_w2_scout.py  test_w2_skill_runtime.py  test_w3_analyze_gaps.py  test_w4_agent.py  test_w4_config.py  test_w4_inbox.py  test_w4_notify.py  test_w4_web.py  test_w5p_application_events.py  test_w5p_skill_runtime_strict.py  test_w6_dspy_module.py  test_w6_evolution.py  test_w6_runner.py  test_w7_extension_endpoint.py  test_w7_tracker.py  test_w8_adapters.py  test_w8_agent_prepare.py  test_w8_agentic.py  test_w8_applications_page.py  test_w8_autonomous.py  test_w8_borrowed.py  test_w8_compare_jobs.py  test_w8_deep_prep.py  test_w8_email_ics_interviews.py  test_w8_evolution_diff.py  test_w8_prepare_interview.py  test_w8_reflect.py  test_w8_ui_dashboard.py  test_w8_workers_cli.py  test_w9_dashboard_pipeline.py
(+89 files in other folders)
