[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offerguide"
version = "0.0.1"
description = "Ambient job-hunt copilot for Chinese campus recruitment, with GEPA-style self-evolving SKILLs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hu Yang" }]
keywords = ["agent", "langgraph", "self-evolution", "gepa", "job-hunt", "campus-recruitment"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Core runtime — kept lean. Optional extras below for evolution / UI / etc.
    "langgraph>=1.1,<2.0",
    "langchain-core>=1.0,<2.0",
    "sqlite-vec>=0.1.9",
    "pypdf>=5.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "httpx>=0.27",   # Scout fetches JD pages; LLM client posts chat completions
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1.380",
]
# Future-week opt-ins, listed here so the dependency surface is visible from W1.
evolution = [
    "dspy>=3.2",
]
ui = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",  # form-data parsing for FastAPI
]
# notify: httpx is in core deps already (Scout uses it). 飞书 webhook + Telegram bot
# both go through plain httpx — no provider SDKs needed.
scheduling = [
    "apscheduler>=3.10",
]

[project.urls]
Repository = "https://github.com/hu-yang/offerguide"

[tool.hatch.build.targets.wheel]
packages = ["src/offerguide"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "RUF",
]
# E501: line too long — handled visually
# RUF001/002/003: ambiguous-Unicode warnings — we deliberately use full-width Chinese
# punctuation (×，：。、) in prompts and string literals throughout
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
